apps/base/istio-virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: demo
spec:
  hosts:
  - "httpbin.local"
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: tcp-echo-vs
  namespace: demo
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-gateway
  tcp:
  - match:
    - port: 9000
    route:
    - destination:
        host: tcp-echo
        port:
          number: 9000
